--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,16 @@
         "semaphore.h": "c",
         "stdio.h": "c"
     },
-    "C_Cpp.dimInactiveRegions": false
+    "C_Cpp.dimInactiveRegions": false,
+    "cSpell.ignoreWords": [
+        "GETR",
+        "pthread",
+        "ptrh",
+        "ptrp"
+    ],
+    "cSpell.words": [
+        "ALTERACOES",
+        "Conexao",
+        "GETN"
+    ]
 }
